# backpack

./: .gitignore  Cargo.toml  README.md  backpack.py  bun.lockb  justfile  package.json  pyproject.toml  rustfmt.toml
src/: backpack.civet  backpack.rs  cli.rs  dependency.rs  frontend.rs  index.civet  main.rs  manifest.rs  misc.rs  package.civet  package.rs  packages_cache.civet  packages_cache.rs  project.civet  project.rs
src/backpack/: __main__.py  package.py  requirement.py  solver.py  sync.py  version.py
tools/: bun.lockb  index.ts  package.json
