[package]
name = "backpack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
arcstr = { version = "1.2.0", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
clap_complete_command = "0.6.1"
clap_derive = "4.5.24"
colored = "3.0.0"
directories = "6.0.0"
fxhash = "0.2.1"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"

[profile.release]
debug = true
lto = "fat"
opt-level = 3
