[project]
name = "backpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aspizu", email = "aspizu@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
