[project]
name = "backpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aspizu", email = "aspizu@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.5",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportImportCycles = false
reportImplicitStringConcatenation = false

[tool.ruff.lint]
select = ["ALL"]
extend-safe-fixes = ["ALL"]
unfixable = ["F841"]
ignore = ["COM", "D", "S101", "PLR2004"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
